# levra

./: .gitignore  Cargo.toml  Dioxus.toml  flake.nix  input.css  package-lock.json  package.json  pnpm-lock.yaml  rust-analyzer.toml
assets/: tailwind.css  tailwindy.css
src/: dbmagic.rs  main.rs
src/shared/: types.rs
src/views/: counter.rs  mod.rs
