[package]
name = "levra"
version = "0.1.0"
authors = ["R3XP <rex_p@web.de>", "Witti <Witti@Witti>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
surrealdb = { version = "2.2.2", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
once_cell = { version = "1.18", optional = true} 
axum = { version = "0.7.9", optional = true} 
serde = "1.0.219"
serde_json = "1.0.140"

[features]
default = ["web"]

# Die Plattform-Features (du kannst davon jeweils eins aktivieren)
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio", "dep:surrealdb", "surrealdb/kv-rocksdb", "dep:once_cell", "dep:axum"]

[profile]
# Deine Profile kannst du bei Bedarf ergänzen

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
